--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -7,10 +7,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mukta:wght@400;500&display=swap');
 
 .navstyle{
     background-color: rgba(0, 0, 0, 0.45);
     color: white;
+}
+
+.mukta{
+    font-family: 'Mukta', sans-serif;
 }
 
 .darkdark{
@@ -26,15 +32,20 @@
 .homestyle{
     background: url('../assets/back2.jpg') no-repeat center center/cover;
     background-attachment: fixed;
+}
 
+.newfont{
+    font-family: 'Roboto Slab', serif;
 }
 
 .name{
-    font-family: 'Bebas Neue', sans-serif;
+    /* font-family: 'Bebas Neue', sans-serif; */
+    font-family: "Poppins", sans-serif;
+
 }
 
 .hometype{
-    font-family: 'Handjet', cursive;
+    font-family: "Raleway", sans-serif;
 }
 
 .hovertext:hover{
